--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,20 @@
 version: '3'
+
 services:
+
   web:
     build: .
+    restart: always
     ports:
-     - "5000:5000"
+     - "8008:8008"
     volumes:
      - .:/code
+    depends_on:
+    - mongo
+
+  mongo:
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
