fixed connection between database and web container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,6 @@ services:
     volumes:
      - .:/code
 
-
     depends_on:
     - mongo
     env_file:
@@ -22,5 +21,7 @@ services:
   mongo:
     image: mongo
     restart: always
+    ports:
+      - "27017:27017"
     env_file:
       - development.env
