--- a/development.env
+++ b/development.env
@@ -5,7 +5,7 @@ FLASK_RUN_PORT=8008
 
 SECRET_KEY=dev
 
-MONGO_HOST=localhost
+MONGO_HOST=mongo
 MONGO_PORT=27017
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=test
